# packages/db/src/schema/index.ts
@@ -4,3 +4,4 @@ export * from './accounts';
 export * from './activity';
 export * from './timeseries';
 export * from './admin';
+export * from './hiscores';
